package observer;

import model.Equipment;

public interface EquipmentObserver {
    void update(Equipment equipment);
}