@startuml
title Observer Pattern - Equipment Status Updates

skinparam classAttributeIconSize 0
skinparam shadowing false

interface EquipmentObserver <<Observer>> {
  + update(equipment: Equipment): void
}

interface EquipmentSubject {
  + attach(observer: EquipmentObserver): void
  + detach(observer: EquipmentObserver): void
  + notifyObservers(): void
}

class Equipment {
  - status: String
  + enable(): void
  + disable(): void
  + markMaintenance(): void
  + applySensorUpdate(update: SensorUpdate): void
}

class LabManagerDashboard {
  + update(equipment: Equipment): void
}

class NotificationService {
  + update(equipment: Equipment): void
}

class GUIController {
  + attachDefaultObserversToEquipment(equipment: Equipment): void
}

class SensorUpdate {
  - operationalStatus: String
  - message: String
}

Equipment ..|> EquipmentSubject
LabManagerDashboard ..|> EquipmentObserver
NotificationService ..|> EquipmentObserver

Equipment --> EquipmentObserver 
GUIController ..> LabManagerDashboard 
GUIController ..> NotificationService 
SensorUpdate ..> Equipment 
@enduml
